Fix hard to read page number on forums 2

--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ div.jumbo {
 	color: #fff;
 }
 
-div.p-pagination a:link {
+div.p-pagination span.label a:link {
 	color: #fff;
 }
 
